badua errore mojo

--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
     <redirectTestOutputToFile>true</redirectTestOutputToFile>
-    <sonar.coverage.jacoco.xmlReportPaths>${maven.multiModuleProjectDirectory}/tests/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <test.additional.args/>
     <!--
    Surefire plugin argLine can be defined as a Maven property to avoid JVM errors on startup with no jacaco-maven-plugin
    https://www.eclemma.org/jacoco/trunk/doc/prepare-agent-mojo.html
    -->
     <argLine>-Xms512m -Xmx1024m -Xss256k</argLine>
+    <maven.deploy.skip>true</maven.deploy.skip>
   </properties>
 
   <dependencies>
@@ -48,6 +48,11 @@
       <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>ba-dua</groupId>
+      <artifactId>ba-dua-cli</artifactId>
+      <version>0.4.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -64,15 +69,15 @@
           <version>3.9.1</version>
         </plugin>
         <plugin>
-          <groupId>org.jacoco</groupId>
-          <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.5</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.1.0</version>
           <configuration>
+            <argLine>
+              @{argLine} -javaagent:/home/matteo/IdeaProjects/test-jacoco/jars/ba-dua-agent-rt-0.4.0-all.jar
+              -Xbootclasspath/p:/home/matteo/IdeaProjects/test-jacoco/jars/ba-dua-agent-rt-0.4.0-all.jar
+              -Doutput.file=target/badua.ser
+            </argLine>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <encoding>utf-8</encoding>
             <runOrder>alphabetical</runOrder>
@@ -80,66 +85,80 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.1.0</version>
-        <configuration>
-          <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          <encoding>utf-8</encoding>
-          <runOrder>alphabetical</runOrder>
-        </configuration>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.10</version>
         <executions>
           <execution>
             <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
+              <goal>copy</goal>
             </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>ba-dua</groupId>
+                  <artifactId>ba-dua-agent-rt</artifactId>
+                  <classifier>all</classifier>
+                  <version>0.4.0</version>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
           </execution>
         </executions>
       </plugin>
-      <!--Added by Ella-->
       <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.5</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.5.0</version>
         <executions>
           <execution>
-            <id>prepare-agent</id>
             <goals>
-              <goal>prepare-agent</goal>
+              <goal>java</goal>
             </goals>
+            <phase>verify</phase>
+            <configuration>
+              <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>
+              <arguments>
+                <argument>-input</argument>
+                <argument>${maven.multiModuleProjectDirectory}/tests/badua.ser</argument>
+                <argument>-classes</argument>
+                <argument>${project.build.outputDirectory}</argument>
+                <argument>-show-classes</argument>
+                <argument>-show-methods</argument>
+                <argument>-xml</argument>
+                <argument>${project.build.directory}/badua.xml</argument>
+              </arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <!-- Using this version to support requireFileChecksum with Java 6 -->
+        <version>3.0.0-M1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <phase>verify</phase>
+            <configuration>
+              <rules>
+                <requireFileChecksum>
+                  <file>${project.build.directory}/badua.xml</file>
+                  <checksum>b481fddd94ffd06b62a1f717bdfa9f72</checksum>
+                  <type>md5</type>
+                </requireFileChecksum>
+              </rules>
+              <fail>true</fail>
+            </configuration>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
-
-  <profiles>
-    <profile>
-      <id>coverage</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>prepare-agent</id>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
 </project>
