--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -114,6 +115,7 @@
         <version>1.5.0</version>
         <executions>
           <execution>
+            <id>cli1</id>
             <goals>
               <goal>java</goal>
             </goals>
@@ -122,38 +124,38 @@
               <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>
               <arguments>
                 <argument>-input</argument>
-                <argument>${maven.multiModuleProjectDirectory}/tests/badua.ser</argument>
+                <argument>${maven.multiModuleProjectDirectory}/tests/target/badua.ser</argument>
                 <argument>-classes</argument>
-                <argument>${project.build.outputDirectory}</argument>
+                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/classes</argument>
+                <argument>-classes</argument>
+                <argument>${maven.multiModuleProjectDirectory}/tests/target/classes</argument>
                 <argument>-show-classes</argument>
                 <argument>-show-methods</argument>
                 <argument>-xml</argument>
-                <argument>${project.build.directory}/badua.xml</argument>
+                <argument>${maven.multiModuleProjectDirectory}/tests/target/badua.xml</argument>
               </arguments>
             </configuration>
           </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <!-- Using this version to support requireFileChecksum with Java 6 -->
-        <version>3.0.0-M1</version>
-        <executions>
           <execution>
+            <id>cli2</id>
             <goals>
-              <goal>enforce</goal>
+              <goal>java</goal>
             </goals>
             <phase>verify</phase>
             <configuration>
-              <rules>
-                <requireFileChecksum>
-                  <file>${project.build.directory}/badua.xml</file>
-                  <checksum>b481fddd94ffd06b62a1f717bdfa9f72</checksum>
-                  <type>md5</type>
-                </requireFileChecksum>
-              </rules>
-              <fail>true</fail>
+              <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>
+              <arguments>
+                <argument>-input</argument>
+                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/badua.ser</argument>
+                <argument>-classes</argument>
+                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/classes</argument>
+                <argument>-classes</argument>
+                <argument>${maven.multiModuleProjectDirectory}/tests/target/classes</argument>
+                <argument>-show-classes</argument>
+                <argument>-show-methods</argument>
+                <argument>-xml</argument>
+                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/badua.xml</argument>
+              </arguments>
             </configuration>
           </execution>
         </executions>
