--- a/pom.xml
+++ b/pom.xml
@@ -48,117 +48,13 @@
       <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>ba-dua</groupId>
-      <artifactId>ba-dua-cli</artifactId>
-      <version>0.4.0</version>
-    </dependency>
   </dependencies>
-
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.sonarsource.scanner.maven</groupId>
-          <artifactId>sonar-maven-plugin</artifactId>
-          <version>3.9.1</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.1.0</version>
-          <configuration>
-            <argLine>
-              @{argLine} -javaagent:/home/matteo/IdeaProjects/test-jacoco/jars/ba-dua-agent-rt-0.4.0-all.jar
-              -Xbootclasspath/p:/home/matteo/IdeaProjects/test-jacoco/jars/ba-dua-agent-rt-0.4.0-all.jar
-              -Doutput.file=target/badua.ser
-            </argLine>
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-            <encoding>utf-8</encoding>
-            <runOrder>alphabetical</runOrder>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>ba-dua</groupId>
-                  <artifactId>ba-dua-agent-rt</artifactId>
-                  <classifier>all</classifier>
-                  <version>0.4.0</version>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.5.0</version>
-        <executions>
-          <execution>
-            <id>cli1</id>
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <phase>verify</phase>
-            <configuration>
-              <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>
-              <arguments>
-                <argument>-input</argument>
-                <argument>${maven.multiModuleProjectDirectory}/tests/target/badua.ser</argument>
-                <argument>-classes</argument>
-                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/classes</argument>
-                <argument>-classes</argument>
-                <argument>${maven.multiModuleProjectDirectory}/tests/target/classes</argument>
-                <argument>-show-classes</argument>
-                <argument>-show-methods</argument>
-                <argument>-xml</argument>
-                <argument>${maven.multiModuleProjectDirectory}/tests/target/badua.xml</argument>
-              </arguments>
-            </configuration>
-          </execution>
-          <execution>
-            <id>cli2</id>
-            <goals>
-              <goal>java</goal>
-            </goals>
-            <phase>verify</phase>
-            <configuration>
-              <mainClass>br.usp.each.saeg.badua.cli.Report</mainClass>
-              <arguments>
-                <argument>-input</argument>
-                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/badua.ser</argument>
-                <argument>-classes</argument>
-                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/classes</argument>
-                <argument>-classes</argument>
-                <argument>${maven.multiModuleProjectDirectory}/tests/target/classes</argument>
-                <argument>-show-classes</argument>
-                <argument>-show-methods</argument>
-                <argument>-xml</argument>
-                <argument>${maven.multiModuleProjectDirectory}/src-test-jacoco/target/badua.xml</argument>
-              </arguments>
-            </configuration>
-          </execution>
-        </executions>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
       </plugin>
     </plugins>
   </build>
