ba-dua funzionante

--- a/src-test-jacoco/pom.xml
+++ b/src-test-jacoco/pom.xml
@@ -64,8 +64,8 @@
                             <version>${maven-surefire-plugin.version}</version>
                             <configuration>
                                 <argLine>
-                                    @{argLine} -javaagent:/home/matteo/IdeaProjects/test-jacoco/jars/ba-dua-agent-rt-0.4.0-all.jar
-                                    -Xbootclasspath/p:/home/matteo/IdeaProjects/test-jacoco/jars/ba-dua-agent-rt-0.4.0-all.jar
+                                    @{argLine} -javaagent:${maven.multiModuleProjectDirectory}/jars/ba-dua-agent-rt-0.4.0-all.jar
+                                    -Xbootclasspath/p:${maven.multiModuleProjectDirectory}/jars/ba-dua-agent-rt-0.4.0-all.jar
                                     -Doutput.file=target/badua.ser
                                 </argLine>
                             </configuration>
